# genode_bionic_first_commit

./: changes_done_at_home.txt~
build.lx/var/: libdeps
build.lx/var/libcache/alarm/: alarm.d
build.lx/var/libcache/base/: thread.d  thread_linux.d
build.lx/var/libcache/bionic_libc_stdio/: fclose.d  flags.d
build.lx/var/libcache/cxx/: exception.d  guard.d  malloc_free.d  misc.d  unwind.d
build.lx/var/libcache/ld/: environ.d  err.d  file.d  lock.d  main.d  reloc.d  rtld.d  stdlib.d  test.d  xmalloc.d
build.lx/var/libcache/ldso-arch/: binary_name.d
build.lx/var/libcache/startup/: _main.d
build.lx/var/libcache/syscall/: lx_clone.d
build.lx/var/libcache/timed_semaphore/: timed_semaphore.d
contrib/bionic-3b7c7405f0cf0133ce44b79a7e9a4772cb103d26/: bionic.hash
contrib/bionic-3b7c7405f0cf0133ce44b79a7e9a4772cb103d26/src/lib/: cscope.in.out
contrib/curl-babb8fef029e681848beb828b1b89bc86f77cbfe/include/curl/: curl.h
contrib/ffat-1dc621c1494e8db8975bada85b21992590ff2c44/include/ffat/: ffconf.h
contrib/fuse-ext2-867fc9cb8f828f6463871d5db396b8cda9d7b5b5/src/lib/fuse-ext2/: AUTHORS  Makefile.am  configure.ac
contrib/fuse-ext2-867fc9cb8f828f6463871d5db396b8cda9d7b5b5/src/lib/fuse-ext2/e2fsprogs-1.41.12.newgit/: Makefile.am  version.h
contrib/fuse-ext2-867fc9cb8f828f6463871d5db396b8cda9d7b5b5/src/lib/fuse-ext2/e2fsprogs-1.41.12.newgit/blkid/: Makefile.am  dev.c  probe.c  read.c  version.c
contrib/fuse-ext2-867fc9cb8f828f6463871d5db396b8cda9d7b5b5/src/lib/fuse-ext2/e2fsprogs-1.41.12.newgit/e2p/: Makefile.am
contrib/fuse-ext2-867fc9cb8f828f6463871d5db396b8cda9d7b5b5/src/lib/fuse-ext2/e2fsprogs-1.41.12.newgit/et/: com_err.c  error_message.c  init_et.c
contrib/fuse-ext2-867fc9cb8f828f6463871d5db396b8cda9d7b5b5/src/lib/fuse-ext2/e2fsprogs-1.41.12.newgit/ext2fs/: Makefile.am  brel_ma.c  closefs.c  dir_iterate.c  ext2_err.c  extent.c  fileio.c  finddev.c  flushb.c  getsectsize.c  getsize.c  icount.c  imager.c  inode.c  inode_io.c  ismounted.c  llseek.c  mkjournal.c  res_gdt.c  rw_bitmaps.c  tdb.c  test_io.c  undo_io.c  unix_io.c  version.c
contrib/fuse-ext2-867fc9cb8f828f6463871d5db396b8cda9d7b5b5/src/lib/fuse-ext2/e2fsprogs-1.41.12.newgit/misc/: Makefile.am  default_profile.c  e2label.c  mke2fs.c  profile.c  util.c
contrib/fuse-ext2-867fc9cb8f828f6463871d5db396b8cda9d7b5b5/src/lib/fuse-ext2/e2fsprogs-1.41.12.newgit/uuid/: Makefile.am  gen_uuid.c
contrib/fuse-ext2-867fc9cb8f828f6463871d5db396b8cda9d7b5b5/src/lib/fuse-ext2/fuse-ext2/: Makefile.am  fuse-ext2.c  fuse-ext2.h  op_access.c  op_statfs.c
contrib/jitterentropy-7dbc3c0143b0312290895d91ccfa97e6a6e2ae3f/: jitterentropy-20140411.tar.bz2
contrib/libdrm-2e31d538bb1079550c85c3b7e5151f4f2f91db98/: libdrm-2.4.21.tar.bz2
contrib/qoost-a82bfc83c554bb1f7e93cc9c71973a2f97f4937d/: qoost-2013-06-10.tar.bz2
mybuild/: Makefile  VERBOSE_MK=  abcd.txt  compile.txt  par1.txt
mybuild/etc/: build.conf~
mybuild/var/: libdeps
mybuild/var/libcache/ld/: debug.d  (+8 more)
repos/libports/ports/: bionic.port
repos/linux_drivers/: README
(+4625 files in other folders)
