noinst_LIBRARIES = \
	libext2fs.a

libext2fs_a_SOURCES = \
	alloc.c	\
	alloc_sb.c	\
	alloc_stats.c	\
	alloc_tables.c	\
	badblocks.c	\
	bb_compat.c	\
	bb_inode.c	\
	bitmaps.c	\
	bitops.c	\
	bitops.h	\
	blkmap64_ba.c	\
	blknum.c	\
	block.c	\
	bmap64.h	\
	bmap.c	\
	brel.h	\
	brel_ma.c	\
	check_desc.c	\
	closefs.c	\
	crc16.c	\
	crc16.h	\
	csum.c	\
	dblist.c	\
	dblist_dir.c	\
	dirblock.c	\
	dirhash.c	\
	dir_iterate.c	\
	dupfs.c	\
	e2image.h	\
	expanddir.c	\
	ext2_err.c	\
	ext2_err.h	\
	ext2_ext_attr.h	\
	ext2_fs.h	\
	ext2fs.h	\
	ext2fsP.h	\
	ext2_io.h	\
	ext2_types.h	\
	ext3_extents.h	\
	ext_attr.c	\
	extent.c	\
	fiemap.h	\
	fileio.c	\
	finddev.c	\
	flushb.c	\
	freefs.c	\
	gen_bitmap64.c	\
	gen_bitmap.c	\
	get_pathname.c	\
	getsectsize.c	\
	getsize.c	\
	i_block.c	\
	icount.c	\
	imager.c	\
	ind_block.c	\
	initialize.c	\
	inline.c	\
	inode.c	\
	inode_io.c	\
	io_manager.c	\
	ismounted.c	\
	jfs_compat.h	\
	jfs_dat.h	\
	jfs_user.h	\
	kernel-jbd.h	\
	kernel-list.h	\
	link.c	\
	llseek.c	\
	lookup.c	\
	mkdir.c	\
	mkjournal.c	\
	namei.c	\
	native.c	\
	newdir.c	\
	openfs.c	\
	progress.c	\
	punch.c	\
	read_bb.c	\
	read_bb_file.c	\
	res_gdt.c	\
	rw_bitmaps.c	\
	sparse.c	\
	swapfs.c	\
	tdb.c	\
	tdb.h	\
	tdbtool.c	\
	test_io.c	\
	undo_io.c	\
	unix_io.c	\
	unlink.c	\
	valid_blk.c	\
	version.c	\
	write_bb_file.c

libext2fs_a_CFLAGS =				\
	-I$(top_srcdir)/e2fsprogs-1.41.12.newgit	\
	-I$(top_srcdir)/e2fsprogs-1.41.12.newgit/et
